Minor bugfix in the webpage

--- a/src/main/resources/templates/homepage.html
+++ b/src/main/resources/templates/homepage.html
@@ -69,8 +69,7 @@
 	        <div class="panel-body">
 	          Method: POST<br/>
 	          Address: &lt;hostname&gt;/urls/<br/>
-	          Content-type: application/json<br/>
-	          Data: http://some-very.long/url/here/<br/>
+	          Data: originalUrl=http://some-very.long/url/here/&amp;customUrl=If_D3SIRed<br/>
 	        </div>
 	      </div>
 	    </div>
